# tap-confluence

./: .gitignore  .pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
tap_confluence/: authenticator.py  cli.py  confluence.py  context.py  discover.py  exceptions.py  streams.py  sync.py  tap.py  utils.py
tap_confluence/schemas/: blogposts.json  content.json  pages.json  spaces.json
tap_confluence/streams/: base.py  groups.py
tap_confluence/streams/space/: blogpost.py  page.py
