[tool.poetry]
name = "tap-confluence"
version = "0.0.1"
description = "Singer tap for the Confluence Content REST API"
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
singer-sdk = "~=0.34.0"

[tool.poetry.scripts]
tap-confluence = 'tap_confluence.tap:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
