[project]
name = "tap-moonnox-confluence"
version = "0.1.0"
requires-python = ">=3.10, <4.0"
dependencies = [
  "singer-python==6.1.1",
  "requests~=2.32.4"
]

[tool.optional-dependencies]
dev = [
  "pylint>=3.3.7",
  "black>=25.1.0"
]

[project.scripts]
tap-confluence = "tap_confluence.cli:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tap_confluence = ["schemas/*.json"]

[tool.black]
line-length = 79

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
